--- a/index.html
+++ b/index.html
@@ -338,15 +338,15 @@
 <div class="row">
             <div class="col-md-12">
                 <div id="gallery-slider" class="owl-carousel">
-                    <div class="item"><a href="images/1.jpg" data-lightbox="gallery"><img src="images/1.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/2.jpg" data-lightbox="gallery"><img src="images/2.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/3.jpg" data-lightbox="gallery"><img src="images/3.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/4.jpg" data-lightbox="gallery"><img src="images/4.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/5.jpg" data-lightbox="gallery"><img src="images/5.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/6.jpg" data-lightbox="gallery"><img src="images/6.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/7.jpg" data-lightbox="gallery"><img src="images/7.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/8.png" data-lightbox="gallery"><img src="images/8.png" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/9.png" data-lightbox="gallery"><img src="images/9.png" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/1.JPG" data-lightbox="gallery"><img src="images/1.JPG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/2.JPG" data-lightbox="gallery"><img src="images/2.JPG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/3.JPG" data-lightbox="gallery"><img src="images/3.JPG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/4.JPG" data-lightbox="gallery"><img src="images/4.JPG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/5.JPG" data-lightbox="gallery"><img src="images/5.JPG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/6.JPG" data-lightbox="gallery"><img src="images/6.JPG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/7.JPG" data-lightbox="gallery"><img src="images/7.JPG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/8.PNG" data-lightbox="gallery"><img src="images/8.PNG" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/9.PNG" data-lightbox="gallery"><img src="images/9.PNG" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/10.jpg" data-lightbox="gallery"><img src="images/10.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/11.jpg" data-lightbox="gallery"><img src="images/11.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/12.jpg" data-lightbox="gallery"><img src="images/12.jpg" alt="Gallery Image" class="img-fluid"></a></div>
@@ -369,7 +369,7 @@
                     <div class="item"><a href="images/29.jpg" data-lightbox="gallery"><img src="images/29.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/30.jpg" data-lightbox="gallery"><img src="images/30.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/31.jpg" data-lightbox="gallery"><img src="images/31.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/32.jpg" data-lightbox="gallery"><img src="images/32.jpg" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/32.JPG" data-lightbox="gallery"><img src="images/32.JPG" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/33.jpg" data-lightbox="gallery"><img src="images/33.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/34.jpg" data-lightbox="gallery"><img src="images/34.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/35.jpg" data-lightbox="gallery"><img src="images/35.jpg" alt="Gallery Image" class="img-fluid"></a></div>
@@ -378,7 +378,7 @@
                     <div class="item"><a href="images/38.jpg" data-lightbox="gallery"><img src="images/38.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/39.jpg" data-lightbox="gallery"><img src="images/39.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/40.jpg" data-lightbox="gallery"><img src="images/40.jpg" alt="Gallery Image" class="img-fluid"></a></div>
-                    <div class="item"><a href="images/41.jpg" data-lightbox="gallery"><img src="images/41.jpg" alt="Gallery Image" class="img-fluid"></a></div>
+                    <div class="item"><a href="images/41.JPG" data-lightbox="gallery"><img src="images/41.JPG" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/42.jpg" data-lightbox="gallery"><img src="images/42.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/43.jpg" data-lightbox="gallery"><img src="images/43.jpg" alt="Gallery Image" class="img-fluid"></a></div>
                     <div class="item"><a href="images/44.jpg" data-lightbox="gallery"><img src="images/44.jpg" alt="Gallery Image" class="img-fluid"></a></div>
