--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="images/logo.png" alt="logo" class="logo-default" style="width: 150%; height: auto;">
             <img src="images/logo-clear.png" alt="logo" class="logo-scrolled" style="width: 150%; height: auto;">
 
-                <span style="color: white;">Claros Renovations LLC</span>
+                <span>Claros Renovations LLC</span>
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
