--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="claros, claros renovations, claros renovations LLC, Os1t025">
+    <meta name="description" content="Claros Renovations LLC offers high-quality renovation services tailored to your needs. Transform your space with our expert team. Contact us today!">
     <title>Claros Renovations LLC</title>
     <link href="images/favicon.ico" rel="icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
